complete home and notFound pages

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,13 +1,18 @@
+.container {
+    margin-bottom: 60px;
+}
+
 .navList {
     display: flex;
+    gap: 20px;
 }
 
 .link {
-    font-size: 40px;
+    font-size: 30px;
     text-decoration: none;
-    color: blue;
+    border-radius: 10px;
     padding: 30px;
-    border-radius: 20px;
+    color: blue;
 }
 
 .active {
