--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -8,14 +8,14 @@
 }
 
 .link {
-    font-size: 30px;
+    font-size: 15px;
     text-decoration: none;
     border-radius: 10px;
-    padding: 30px;
-    color: blue;
+    padding: 20px;
+    color: rgb(107, 107, 255);
 }
 
 .active {
     color: #fff;
-    background-color: blue;
+    background-color: rgb(107, 107, 255);
 }
