--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,14 +4,15 @@
 
 .navList {
     display: flex;
-    gap: 20px;
+    border-bottom: 1px solid rgb(107, 107, 255);
 }
 
 .link {
+    display: block;
     font-size: 15px;
     text-decoration: none;
-    border-radius: 10px;
-    padding: 20px;
+    border-radius: 10px 10px 0 0;
+    padding: 16px;
     color: rgb(107, 107, 255);
 }
 
